# Cos214_Project

./: .gitignore  BakerChef.cpp  BakerChef.h  BeefPatty.cpp  BeefPatty.h  Bill.cpp  Bill.h  BillComponent.cpp  BillComponent.h  BillComposite.cpp  BillComposite.h  Burger.cpp  Burger.h  BurgerBuns.cpp  BurgerBuns.h  BurgerIngredient.cpp  BurgerIngredient.h  Busy.cpp  Busy.h  ButcherChef.cpp  ButcherChef.h  CMakeLists.txt  Chef.cpp  Chef.h  ChickenPatty.cpp  ChickenPatty.h  Clock.cpp  Clock.h  CommandLog.cpp  CommandLog.h  CommandLogIterator.cpp  CommandLogIterator.h  Commands.cpp  Commands.h  Constants.cpp  Constants.h  Customer.cpp  Customer.h  Eating.cpp  Eating.h  (+78 more)
.github/workflows/: cmake-single-platform.yml
Doxygen/html/: _baker_chef_8h.html  _baker_chef_8h_source.html  _beef_patty_8h.html  _beef_patty_8h_source.html  _bill_8cpp.html  _bill_8h.html  _bill_8h_source.html  _bill_component_8cpp.html  _bill_component_8h.html  _bill_component_8h_source.html  _bill_composite_8cpp.html  _bill_composite_8h.html  _bill_composite_8h_source.html  _burger_8h.html  _burger_8h_source.html  _burger_buns_8h.html  _burger_buns_8h_source.html  _burger_ingredient_8h.html  _burger_ingredient_8h_source.html  _busy_8cpp.html  _busy_8h.html  _busy_8h_source.html  _butcher_chef_8h.html  _butcher_chef_8h_source.html  _chef_8h.html  _chef_8h_source.html  _chicken_patty_8h.html  _chicken_patty_8h_source.html  _clock_8cpp.html  _clock_8h.html  _clock_8h_source.html  _command_log_8cpp.html  _command_log_8h.html  _command_log_8h_source.html  _command_log_iterator_8cpp.html  _command_log_iterator_8h.html  _command_log_iterator_8h_source.html  _commands_8cpp.html  _commands_8h.html  _commands_8h_source.html  (+278 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_10.js  (+35 more)
Doxygen/latex/: _baker_chef_8h.tex  _baker_chef_8h_source.tex  _beef_patty_8h.tex  _beef_patty_8h_source.tex  _bill_8cpp.tex  _bill_8h.tex  _bill_8h_source.tex  _bill_component_8cpp.tex  _bill_component_8h.tex  _bill_component_8h_source.tex  _bill_composite_8cpp.tex  _bill_composite_8h.tex  _bill_composite_8h_source.tex  _burger_8h.tex  _burger_8h_source.tex  _burger_buns_8h.tex  _burger_buns_8h_source.tex  _burger_ingredient_8h.tex  _burger_ingredient_8h_source.tex  _busy_8cpp.tex  _busy_8h.tex  _busy_8h_source.tex  _butcher_chef_8h.tex  _butcher_chef_8h_source.tex  _chef_8h.tex  _chef_8h_source.tex  _chicken_patty_8h.tex  _chicken_patty_8h_source.tex  _clock_8cpp.tex  _clock_8h.tex  _clock_8h_source.tex  _command_log_8cpp.tex  _command_log_8h.tex  _command_log_8h_source.tex  _command_log_iterator_8cpp.tex  _command_log_iterator_8h.tex  _command_log_iterator_8h_source.tex  _commands_8cpp.tex  _commands_8h.tex  _commands_8h_source.tex  (+220 more)
GTest/: CMakeLists.txt  tests.cpp
GTest/lib/: CMakeLists.txt
GTest/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-nice-strict.h
GTest/lib/googlemock/src/: gmock-spec-builders.cc
GTest/lib/googlemock/test/: gmock_output_test.py
GTest/lib/googletest/: README.md
GTest/lib/googletest/include/gtest/internal/: gtest-port.h
GTest/lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test.py  googletest-death-test-test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-list-tests-unittest.py  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test.py  gtest_unittest.cc
olcPixelGameEngine/: olcPGEX_Sound.h  olcPixelGameEngine.h  olcSoundWaveEngine.h
